--- a/main.scss
+++ b/main.scss
@@ -17,7 +17,7 @@
   display: grid;
   gap: 10px;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 350px);
+  grid-template-rows: repeat(3, minmax(270px, auto));
   &__cart--hover:hover .cart-inner-descr {
     transition: 0.3s ease;
     bottom: 0;
@@ -83,6 +83,7 @@
 .advantge {
   display: flex;
   align-items: center;
+  width: 100%;
   flex-direction: column;
   &__layout-grid {
     margin: 0 auto;
@@ -97,33 +98,152 @@
   }
 }
 .carts-desc {
-  max-width: 600px;
-
+  width: 90%;
   &__cart {
-    width: 100%;
+    width: 55%;
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 50px;
+    margin: 0 auto 15px auto;
   }
 
   &__image--modif {
   }
   &__image {
-    width: 200px;
+    width: 150px;
+    margin: 0 20px;
   }
 
   &__inner-text {
   }
+  
   &__text-title {
     margin: 0;
   }
   &__desc {
+    margin: 0;
+  }
+  .text--modif {
+    text-align: right;
   }
 }
-.text--modif {
-  text-align: right;
+.security {
+  width: 100%;
+  display: flex;
+  background-color: white;
+  flex-direction: column;
+  position: relative;
+  background-image: url(/images/security-bg-img.avif);
+  background-size: cover;
+  background-position: center;
+  &__container {
+    margin: 20px auto;
+    text-align: center;
+
+  }
+  &__bg-separator {
+  }
+  &__bg-img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+  }
+  &__title {
+    margin: 0;
+  }
+
+  &__subtitle {
+    width: 50%;
+    margin: 10px auto;
+    text-align: center;
+  }
+  &__button {
+    @extend %main-button;
+  }
+  &__button--hover:hover {
+    @extend %main-button-hover;
+  }
 }
-@media (max-width: $desctop) {
+.questions {
+  &__container {
+  }
+
+  &__container--js {
+  }
+
+  &__title {
+  }
+
+  &__inner-question {
+  }
+
+  &__wrap-title-btn {
+  }
+
+  &__wrap-title-btn--js {
+  }
+
+  &__question-title {
+  }
+
+  &__arrow-btn {
+  }
+
+  &__answer {
+  }
+
+  &__answer--js {
+  }
+}
+.call {
+
+  &__wrap {
+  }
+
+  &__inner-text {
+  }
+
+  &__title {
+  }
+
+  &__subtitle {
+  }
+
+  &__t-number {
+  }
+
+  &__inner-links {
+  }
+
+  &__subtitle-part {
+  }
+
+  &__links {
+  }
+}
+.footer {
+
+  &__title {
+  }
+
+  &__inner-links {
+  }
+
+  &__list-links {
+  }
+
+  &__list-item {
+  }
+
+  &__list-link {
+  }
+
+  &__link-partner {
+  }
+}
+
+
+@media (max-width: $desctop + px) {
   .grid-carts {
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(4, auto);
@@ -144,7 +264,11 @@
 @media (max-width: $tablet + px) {
   .grid-carts {
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(6, 350px);
+    grid-template-rows: repeat(6, minmax(300px, 1fr));
+  }
+  .first-cart {
+    grid-column: 1/3;
+
   }
 }
 
