--- a/main.scss
+++ b/main.scss
@@ -130,7 +130,7 @@
   display: flex;
   background-color: white;
   flex-direction: column;
-  background-image: url(security-bg-img.avif);
+  background-image: url(/images/security-bg-img.avif);
   background-size: cover;
   background-position: center;
   &__container {
