--- a/core-style/config/_mixins.scss
+++ b/core-style/config/_mixins.scss
@@ -6,3 +6,7 @@
     $addSize: $startSize - $minSize;
     #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / (#{$max-width} - 320)));
 }
+@mixin calculate-value($property, $startSize, $minSize, $max-width, $value-on) {
+    $addSize: $startSize - $minSize;
+    #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / (#{$max-width} - 320))) $value-on;
+}
