--- a/core-style/config/_template.scss
+++ b/core-style/config/_template.scss
@@ -7,3 +7,12 @@
     justify-content: center;
     align-items: center;
 }
+%bg-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    object-position: center center;
+}
