--- a/core-style/config/_parameters.scss
+++ b/core-style/config/_parameters.scss
@@ -15,6 +15,7 @@ $cr-dark-bg: rgba(255, 255, 255, 0.5);
 $cr-title: #654321;
 $cr-subtitle: #654321;
 $cr-text: #654321;
+$cr-text-second: #808080;
 
 // Border
 $border-bold: solid 3px #ffa500;
