--- a/core-style/components/_header.scss
+++ b/core-style/components/_header.scss
@@ -137,7 +137,7 @@
     &__menu {
     }
 
-    &__menu-list {
+    /* &__menu-list {
       position: absolute;
       top: 0;
       right: 0px;
@@ -146,7 +146,7 @@
       height: 100vh;
       margin: 0;
       z-index: 20;
-    }
+    } */
 
     &__menu-item {
       display: block;
