--- a/css/registration-authorization.css
+++ b/css/registration-authorization.css
@@ -588,6 +588,11 @@ template {
 
 .regist {
   width: 100%;
+  height: 100vh;
+}
+
+.regist__wrap {
+  margin-top: 150px;
 }
 
 .regist__head {
@@ -603,11 +608,12 @@ template {
   color: #808080;
   text-decoration: none;
   border-bottom: 1px solid #808080;
+  margin: 5px 0;
 }
 
 .form {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .form__slider {
@@ -635,7 +641,7 @@ template {
   padding: 30px 20px;
   border: solid 3px #ffa500;
   width: 100%;
-  max-width: 450px;
+  max-width: 350px;
 }
 
 .form__inner-input {
@@ -683,11 +689,10 @@ template {
   width: 100%;
   padding: 15px;
   background-color: none;
-  border: 2px solid #ffa500;
+  border: 3px solid #ffa500;
   font-size: 20px;
   -webkit-transition: background-color 0.2s ease, color 0.2s ease;
   transition: background-color 0.2s ease, color 0.2s ease;
-  margin-bottom: -10px;
   cursor: pointer;
 }
 
@@ -696,8 +701,15 @@ template {
   color: white;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .form__inner-input {
     margin-bottom: calc(5px + 10 * ((100vw - 320px) / (480 - 320)));
+  }
+  .regist {
+    width: 100%;
+    height: 100vh;
+  }
+  .regist__wrap {
+    margin-top: calc(0px + 150 * ((100vw - 320px) / (480 - 320)));
   }
 }
