--- a/css/registration-authorization.css
+++ b/css/registration-authorization.css
@@ -589,10 +589,12 @@ template {
 .regist {
   width: 100%;
   height: 100vh;
-}
-
-.regist__wrap {
-  margin-top: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .regist__head {
@@ -601,7 +603,7 @@ template {
 
 .regist__title {
   font-size: 38px;
-  margin-bottom: 0px;
+  margin: 0;
 }
 
 .regist__auth {
@@ -617,7 +619,7 @@ template {
 }
 
 .form__slider {
-  width: 100%;
+  width: 100vw;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -638,7 +640,7 @@ template {
   margin: 0 15px 20px 15px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 30px 20px;
+  padding: 20px;
   border: solid 3px #ffa500;
   width: 100%;
   max-width: 350px;
@@ -687,8 +689,8 @@ template {
 
 .form__submit {
   width: 100%;
-  padding: 15px;
-  background-color: none;
+  padding: 10px;
+  background: transparent;
   border: 3px solid #ffa500;
   font-size: 20px;
   -webkit-transition: background-color 0.2s ease, color 0.2s ease;
@@ -703,13 +705,14 @@ template {
 
 @media (max-width: 768px) {
   .form__inner-input {
-    margin-bottom: calc(5px + 10 * ((100vw - 320px) / (480 - 320)));
+    margin-bottom: calc(5px + 5 * ((100vw - 320px) / (480 - 320)));
   }
   .regist {
-    width: 100%;
-    height: 100vh;
+    height: 100%;
+    display: block;
   }
-  .regist__wrap {
-    margin-top: calc(0px + 150 * ((100vw - 320px) / (480 - 320)));
+  .regist__title {
+    font-size: 38px;
+    margin-top: 30px;
   }
 }
