--- a/registration-authorization.scss
+++ b/registration-authorization.scss
@@ -7,8 +7,9 @@
 .regist {
   width: 100%;
   height: 100vh;
+  display: flex;
+  align-items: center;
   &__wrap {
-    margin-top: 150px;
   }
 
   &__head {
@@ -17,7 +18,7 @@
 
   &__title {
     font-size: 38px;
-    margin-bottom: 0px;
+    margin: 0;
   }
 
   &__auth {
@@ -34,7 +35,7 @@
   width: 100%;
   margin-top: 20px;
   &__slider {
-    width: 100%;
+    width: 100vw;
     overflow: hidden;
     display: flex;
   }
@@ -46,7 +47,7 @@
   &__slide {
     margin: 0 15px 20px 15px;
     box-sizing: border-box;
-    padding: 30px 20px;
+    padding: 20px;
     border: $border-bold;
     width: 100%;
     max-width: 350px;
@@ -104,8 +105,8 @@
 
   &__submit {
     width: 100%;
-    padding: 15px;
-    background-color: none;
+    padding: 10px;
+    background: transparent;
     border: 3px solid $color-primary;
     font-size: 20px;
     transition: background-color $anime-act, color $anime-act;
@@ -123,14 +124,17 @@
 @media (max-width: $tablet + px) {
   .form {
     &__inner-input {
-      @include calculate-size(margin-bottom, 15, 5, $mobile);
+      @include calculate-size(margin-bottom, 10, 5, $mobile);
     }
   }
   .regist {
-    width: 100%;
-    height: 100vh;
+    height: 100%;
+    display: block;
     &__wrap {
-      @include calculate-size(margin-top, 150, 0, $mobile);
     }
-  
-}}
+    &__title {
+      font-size: 38px;
+      margin-top: 30px;
+    }
+  }
+}
