--- a/main.scss
+++ b/main.scss
@@ -33,7 +33,7 @@
       "ten one four three"
       "ten six four three"
       "nine six five three"
-      "nine six five eight"
+      "nine six five three"
       "nine six five eight"
       "nine six five eight"
       "nine six five eight"
@@ -117,6 +117,329 @@
 }
 .grid-cart-10 {
   grid-area: ten;
+}
+
+
+@media (max-width: $laptop + px) {
+  .first-screen {
+    &__grid {
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(15, 1fr);
+      gap: 10px;
+      height: 1000px;
+      grid-template-areas:
+        "title title one"
+        "ten eight one"
+        "ten eight one"
+        "ten eight one"
+        "ten eight two"
+        "ten eight two"
+        "nine six two"
+        "nine six two"
+        "nine six three"
+        "nine six three"
+        "five six three"
+        "five seven three"
+        "five seven four"
+        "five seven four"
+        "five seven four";
+    }
+  
+    &__title {
+    }
+  }
+  .grid-cart {
+  
+    &__image {
+    }
+  
+    &__cart-descr {
+    }
+  
+    &__descr-label {
+      font-size: 15px;
+    }
+  
+    &__descr-button {
+    }
+  
+    &__descr-button--hover {
+    }
+  }
+
+}
+
+@media (max-width: $tablet + px) {
+  .first-screen {
+    &__grid {
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(16, 1fr);
+      gap: 10px;
+      height: 1500px;
+      grid-template-areas:
+        "title title title title title title"
+        "one one one two two two"
+        "one one one two two two"
+        "one one one two two two"
+        "five five five two two two"
+        "five five five nine nine nine"
+        "five five five nine nine nine"
+        "three three three three four four"
+        "three three three three four four"
+        "three three three three four four"
+        "six six six seven seven seven"
+        "six six six seven seven seven"
+        "six six six seven seven seven"
+        "eight eight eight ten ten ten"
+        "eight eight eight ten ten ten"
+        "eight eight eight ten ten ten";
+    }
+  
+    &__title {
+      text-align: center;
+    }
+  }
+  .grid-cart {
+  
+    &__image {
+    }
+  
+    &__cart-descr {
+    }
+  
+    &__descr-label {
+      font-size: 15px;
+    }
+  
+    &__descr-button {
+    }
+  
+    &__descr-button--hover {
+    }
+  }
+
+}
+
+@media (max-width: $mobile + px) {
+  .first-screen {
+    &__grid {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+      gap: 10px;
+      min-height: 2500px;
+      grid-template-areas:
+      "title title"
+      "one one"
+      "two two"
+      "three three"
+      "four nine"
+      "five five"
+      "six six"
+      "seven seven"
+      "eight eight"
+      "ten ten";
+    }
+  
+    &__title {
+      text-align: center;
+      font-size: 27px;
+    }
+  }
+  .grid-cart {
+  
+    &__image {
+    }
+  
+    &__cart-descr {
+    }
+  
+    &__descr-label {
+      font-size: 14px;
+    }
+  
+    &__descr-button {
+    }
+  
+    &__descr-button--hover {
+    }
+  }
+
+}
+
+.about-as {
+  &__container {
+  }
+
+  &__wrap {
+    max-width: 830px;
+    margin: 0 auto;
+  }
+
+  &__title {
+    text-align: center;
+  }
+}
+.psy {
+  margin: 0 auto;
+  max-width: 100%;
+  min-height: 350px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 70px;
+  .psy {
+    margin-bottom: 0;
+  }
+  &__photo {
+    min-width: 250px;
+    width: 100%;
+    max-width: 300px;
+    position: relative;
+    margin-right: 30px;
+  }
+  &__photo--modif {
+    min-width: 250px;
+    width: 100%;
+    max-width: 300px;
+    position: relative;
+    margin: 0 0 0 30px;
+  }
+
+  &__square {
+    display: none;
+  }
+
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+
+  &__desc {
+  }
+}
+
+.psy-desc {
+  min-width: 400px;
+  max-width: 480px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  &__text {
+    margin: 0 0 20px 0;
+  }
+  &__text--modif {
+    text-align: right;
+  }
+
+  &__title {
+    font-size: 28px;
+    border-bottom: 1px solid $color-primary;
+    display: inline-block;
+    margin: 0 0 24px 0;
+  }
+
+  &__subtitle {
+    font-size: 24px;
+    color: rgba(0, 0, 0, 0.7);
+    margin: 0;
+  }
+
+  &__desc-time {
+    display: flex;
+    margin: 0 0 24px 0;
+    justify-content: space-between;
+  }
+
+  &__inner-time {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+  }
+  &__inner-time:last-child {
+    margin: 0;
+  }
+
+  &__num {
+    font-size: 48px;
+    margin: 0;
+  }
+
+  &__label {
+    font-size: 24px;
+    margin: 0 0 0 15px;
+    line-height: 100%;
+  }
+
+  &__slider {
+    height: 100px;
+  }
+}
+.slider {
+  display: flex;
+  width: 100%;
+  &__contr {
+    width: 25px;
+    position: relative;
+    background: rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+  }
+
+  &__contr-1 {
+  }
+  &__contr::before,
+  &__contr::after {
+    content: "";
+    display: block;
+    width: 50%;
+    height: 1px;
+    position: absolute;
+    background-color: black;
+  }
+  &__contr-1::before {
+    top: 46%;
+    left: 10%;
+    transform: rotate(-65deg);
+  }
+  &__contr-1::after {
+    top: 56%;
+    left: 10%;
+    transform: rotate(65deg);
+  }
+
+  &__wrap {
+    overflow: hidden;
+    width: 100%;
+  }
+
+  &__mov-tape {
+    display: flex;
+    transform: translateX(-150px);
+  }
+
+  &__slide {
+    height: 100px;
+    cursor: pointer;
+    margin-right: 5px;
+  }
+  &__slide-img {
+    height: 100%;
+  }
+
+  &__contr-2 {
+  }
+  &__contr-2::before {
+    top: 46%;
+    right: 10%;
+    transform: rotate(65deg);
+  }
+  &__contr-2::after {
+    top: 56%;
+    right: 10%;
+    transform: rotate(-65deg);
+  }
 }
 
 .advantge {
@@ -453,7 +776,6 @@
     }
   }
 
-
   .call {
     &__bg-img {
     }
@@ -487,6 +809,168 @@
     }
     &__t-number {
       font-size: 38px;
+    }
+  }
+
+  .psy {
+    margin: 0 auto 50px auto;
+    max-width: 430px;
+    min-height: 298px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    &__photo {
+      height: 270px;
+      width: 90%;
+      max-width: 100%;
+      position: relative;
+      margin: 0;
+    }
+    &__photo--modif {
+      order: 1;
+    }
+
+    &__square {
+      display: none;
+    }
+
+    &__image {
+      position: absolute;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+    &__desc {
+    }
+    &__desc--modif {
+      order: 2;
+    }
+  }
+  .psy-desc {
+    width: 100%;
+    max-width: 320px;
+    min-width: 270px;
+    margin: 15px 0 0 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    &__text {
+      margin: 0 0 20px 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+
+    &__title {
+      margin-bottom: 10px;
+    }
+
+    &__subtitle {
+      font-size: 20px;
+      color: rgba(0, 0, 0, 0.7);
+      margin: 0;
+    }
+
+    &__desc-time {
+      display: flex;
+      margin: 0 0 24px 0;
+      justify-content: space-between;
+    }
+
+    &__inner-time {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      margin: 0;
+      flex-direction: column;
+      text-align: center;
+    }
+    &__inner-time:last-child {
+      margin: 0;
+    }
+
+    &__num {
+      font-size: 48px;
+      margin: 0;
+    }
+
+    &__label {
+      font-size: 20px;
+      margin: 0;
+      line-height: 100%;
+    }
+
+    &__slider {
+      height: 100px;
+    }
+  }
+  .slider {
+    display: flex;
+    width: 100%;
+    &__contr {
+      width: 25px;
+      position: relative;
+      background: rgba(255, 255, 255, 0.5);
+      cursor: pointer;
+    }
+
+    &__contr-1 {
+    }
+    &__contr::before,
+    &__contr::after {
+      content: "";
+      display: block;
+      width: 50%;
+      height: 1px;
+      position: absolute;
+      background-color: black;
+    }
+    &__contr-1::before {
+      top: 46%;
+      left: 10%;
+      transform: rotate(-65deg);
+    }
+    &__contr-1::after {
+      top: 56%;
+      left: 10%;
+      transform: rotate(65deg);
+    }
+
+    &__wrap {
+      overflow: hidden;
+      width: 100%;
+    }
+
+    &__mov-tape {
+      display: flex;
+      transform: translateX(-150px);
+    }
+
+    &__slide {
+      height: 100px;
+      cursor: pointer;
+      margin-right: 5px;
+    }
+    &__slide-img {
+      height: 100%;
+    }
+
+    &__contr-2 {
+    }
+    &__contr-2::before {
+      top: 46%;
+      right: 10%;
+      transform: rotate(65deg);
+    }
+    &__contr-2::after {
+      top: 56%;
+      right: 10%;
+      transform: rotate(-65deg);
     }
   }
 }
@@ -546,6 +1030,7 @@
     &__bg-img {
     }
     &__wrap {
+      padding: 15px;
       align-items: flex-start;
       flex-direction: column;
     }
@@ -557,7 +1042,7 @@
       margin: 0 0 10px 0;
     }
     &__subtitle {
-      @include calculate-size(font-size,24,18,$mobile);
+      @include calculate-size(font-size, 24, 18, $mobile);
     }
     &__wrap-number {
       flex: 0 0 auto;
@@ -569,10 +1054,132 @@
       margin: 0;
     }
     &__name {
-      @include calculate-size(font-size,26,20,$mobile);
+      @include calculate-size(font-size, 26, 20, $mobile);
     }
     &__t-number {
-      @include calculate-size(font-size,38,28,$mobile);
+      @include calculate-size(font-size, 38, 28, $mobile);
+    }
+  }
+  .psy {
+    &__photo {
+      width: 80%;
+    }
+    &__photo--modif {
+    }
+
+    &__square {
+    }
+
+    &__image {
+    }
+
+    &__desc {
+    }
+  }
+  .psy-desc {
+    &__text--modif {
+    }
+
+    &__title {
+      font-size: 20px;
+    }
+
+    &__subtitle {
+      font-size: 16px;
+      color: rgba(0, 0, 0, 0.7);
+      margin: 0;
+    }
+
+    &__desc-time {
+      display: flex;
+      margin: 0 0 15px 0;
+      justify-content: space-between;
+    }
+
+    &__inner-time {
+      display: flex;
+      align-items: center;
+      margin: 0;
+    }
+    &__inner-time:last-child {
+      margin: 0;
+    }
+
+    &__num {
+      font-size: 30px;
+      margin: 0;
+    }
+
+    &__label {
+      font-size: 16px;
+      margin: 0;
+      line-height: 100%;
+    }
+
+    &__slider {
+      height: 100px;
+    }
+  }
+  .slider {
+    display: flex;
+    width: 100%;
+    &__contr {
+      height: 100%;
+      width: 25px;
+      position: relative;
+      background: rgba(255, 255, 255, 0.5);
+      cursor: pointer;
+    }
+
+    &__contr-1 {
+    }
+    &__contr::before,
+    &__contr::after {
+      content: "";
+      display: block;
+      width: 50%;
+      height: 1px;
+      position: absolute;
+      background-color: black;
+    }
+    &__contr-1::before {
+      top: 47%;
+      left: 10%;
+      transform: rotate(-65deg);
+    }
+    &__contr-1::after {
+      top: 56%;
+      left: 10%;
+      transform: rotate(65deg);
+    }
+
+    &__wrap {
+      overflow: hidden;
+      width: 100%;
+    }
+
+    &__mov-tape {
+      display: flex;
+      transform: translateX(-150px);
+    }
+
+    &__slide {
+    }
+    &__slide-img {
+      height: 100%;
+    }
+
+    &__contr-2 {
+    }
+    &__contr-2::before {
+      top: 47%;
+      right: 10%;
+      transform: rotate(65deg);
+    }
+    &__contr-2::after {
+      top: 56%;
+      right: 10%;
+      transform: rotate(-65deg);
     }
   }
 }
