--- a/core-style/components/_header.scss
+++ b/core-style/components/_header.scss
@@ -128,7 +128,7 @@
       display: flex;
       position: absolute;
       z-index: 100;
-      right: 0;
+      right: 100%;
       top: 0;
       background-color: $color-bg;
       padding: 20px;
@@ -229,7 +229,7 @@
       content: "";
       position: absolute;
       width: 100%;
-      height: 2px;
+      height: 1px;
       background-color: rgba(0, 0, 0, 0.5);
       display: block;
     }
@@ -241,9 +241,9 @@
     }
     &__burger-arrow {
       width: 100%;
-      height: 2px;
+      height: 1px;
       position: absolute;
-      top: calc(50% - 1px);
+      top: 50%;
       left: 0;
       background-color:  rgba(0, 0, 0, 0.5);
     }
