--- a/css/registration-authorization.css
+++ b/css/registration-authorization.css
@@ -444,7 +444,7 @@ button {
     display: flex;
     position: absolute;
     z-index: 100;
-    right: 0;
+    right: 100%;
     top: 0;
     background-color: #f3f3f3;
     padding: 20px;
@@ -559,7 +559,7 @@ button {
     content: "";
     position: absolute;
     width: 100%;
-    height: 2px;
+    height: 1px;
     background-color: rgba(0, 0, 0, 0.5);
     display: block;
   }
@@ -571,9 +571,9 @@ button {
   }
   .header__burger-arrow {
     width: 100%;
-    height: 2px;
+    height: 1px;
     position: absolute;
-    top: calc(50% - 1px);
+    top: 50%;
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
   }
